[gd_scene load_steps=74 format=3 uid="uid://ccovkfvc2i0pb"]

[ext_resource type="Texture2D" uid="uid://2tcys02wtygf" path="res://icon.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="2"]
[ext_resource type="Script" path="res://Scripts/Game.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://e2w3esa1vk4w" path="res://Images/idle_animation.png" id="3_0osw5"]
[ext_resource type="Script" path="res://Scripts/Chunk.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://dr0768tw35roh" path="res://Images/run_spritesheet.png" id="5"]
[ext_resource type="Script" path="res://Scripts/Camera2D.gd" id="5_shig4"]
[ext_resource type="Texture2D" uid="uid://i5ay428udi1h" path="res://Images/tileset32.png" id="6_hxpx3"]
[ext_resource type="PackedScene" path="res://Scenes/Interactables/Enemy.tscn" id="8_gyf3q"]
[ext_resource type="Texture2D" uid="uid://crye84nfwfdew" path="res://Images/orangeandyellow.png" id="9_lpjo3"]
[ext_resource type="Script" path="res://Scripts/ViewportCamera.gd" id="10_kuv0c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xhgne"]
atlas = ExtResource("3_0osw5")
region = Rect2(0, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybjhf"]
atlas = ExtResource("3_0osw5")
region = Rect2(29, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_vagqm"]
atlas = ExtResource("3_0osw5")
region = Rect2(58, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0558"]
atlas = ExtResource("3_0osw5")
region = Rect2(87, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_1r536"]
atlas = ExtResource("3_0osw5")
region = Rect2(116, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl24x"]
atlas = ExtResource("3_0osw5")
region = Rect2(145, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_7q8g6"]
atlas = ExtResource("3_0osw5")
region = Rect2(174, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f4hk"]
atlas = ExtResource("3_0osw5")
region = Rect2(203, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao4ti"]
atlas = ExtResource("3_0osw5")
region = Rect2(232, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_wakgp"]
atlas = ExtResource("3_0osw5")
region = Rect2(261, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhamv"]
atlas = ExtResource("3_0osw5")
region = Rect2(290, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_251nj"]
atlas = ExtResource("3_0osw5")
region = Rect2(319, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c848"]
atlas = ExtResource("3_0osw5")
region = Rect2(348, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihago"]
atlas = ExtResource("3_0osw5")
region = Rect2(377, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_5842c"]
atlas = ExtResource("3_0osw5")
region = Rect2(406, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1jn7"]
atlas = ExtResource("3_0osw5")
region = Rect2(435, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn1mv"]
atlas = ExtResource("3_0osw5")
region = Rect2(464, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrw0j"]
atlas = ExtResource("3_0osw5")
region = Rect2(493, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpojc"]
atlas = ExtResource("3_0osw5")
region = Rect2(522, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5f62"]
atlas = ExtResource("3_0osw5")
region = Rect2(551, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_aaxgf"]
atlas = ExtResource("3_0osw5")
region = Rect2(580, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixu8t"]
atlas = ExtResource("3_0osw5")
region = Rect2(609, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg5s2"]
atlas = ExtResource("3_0osw5")
region = Rect2(638, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8e83"]
atlas = ExtResource("3_0osw5")
region = Rect2(667, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjks0"]
atlas = ExtResource("3_0osw5")
region = Rect2(696, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkr1b"]
atlas = ExtResource("3_0osw5")
region = Rect2(725, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxueo"]
atlas = ExtResource("3_0osw5")
region = Rect2(754, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0r0x"]
atlas = ExtResource("3_0osw5")
region = Rect2(783, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_o31pr"]
atlas = ExtResource("3_0osw5")
region = Rect2(812, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2juw"]
atlas = ExtResource("3_0osw5")
region = Rect2(841, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_drwo3"]
atlas = ExtResource("3_0osw5")
region = Rect2(870, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrw5l"]
atlas = ExtResource("3_0osw5")
region = Rect2(899, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ga30n"]
atlas = ExtResource("3_0osw5")
region = Rect2(928, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnqrj"]
atlas = ExtResource("3_0osw5")
region = Rect2(957, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfgvx"]
atlas = ExtResource("3_0osw5")
region = Rect2(986, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxsfy"]
atlas = ExtResource("5")
region = Rect2(0, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uwra"]
atlas = ExtResource("5")
region = Rect2(30, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1m1m"]
atlas = ExtResource("5")
region = Rect2(60, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ahhs"]
atlas = ExtResource("5")
region = Rect2(90, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcwlt"]
atlas = ExtResource("5")
region = Rect2(120, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrim3"]
atlas = ExtResource("5")
region = Rect2(150, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_fol5p"]
atlas = ExtResource("5")
region = Rect2(180, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjqyg"]
atlas = ExtResource("5")
region = Rect2(210, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbdnk"]
atlas = ExtResource("5")
region = Rect2(240, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaqbt"]
atlas = ExtResource("5")
region = Rect2(270, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlw0b"]
atlas = ExtResource("5")
region = Rect2(300, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_yovkk"]
atlas = ExtResource("5")
region = Rect2(330, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnx1f"]
atlas = ExtResource("5")
region = Rect2(360, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmsxw"]
atlas = ExtResource("5")
region = Rect2(390, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjvge"]
atlas = ExtResource("5")
region = Rect2(420, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxt3p"]
atlas = ExtResource("5")
region = Rect2(450, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ml0o"]
atlas = ExtResource("5")
region = Rect2(480, 0, 30, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_abnbp"]
atlas = ExtResource("5")
region = Rect2(510, 0, 30, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_62a3x"]
animations = [{
"frames": [SubResource("AtlasTexture_xhgne"), SubResource("AtlasTexture_ybjhf"), SubResource("AtlasTexture_vagqm"), SubResource("AtlasTexture_s0558"), SubResource("AtlasTexture_1r536"), SubResource("AtlasTexture_fl24x"), SubResource("AtlasTexture_7q8g6"), SubResource("AtlasTexture_8f4hk"), SubResource("AtlasTexture_ao4ti"), SubResource("AtlasTexture_wakgp"), SubResource("AtlasTexture_uhamv"), SubResource("AtlasTexture_251nj"), SubResource("AtlasTexture_2c848"), SubResource("AtlasTexture_ihago"), SubResource("AtlasTexture_5842c"), SubResource("AtlasTexture_i1jn7"), SubResource("AtlasTexture_nn1mv"), SubResource("AtlasTexture_xrw0j"), SubResource("AtlasTexture_cpojc"), SubResource("AtlasTexture_m5f62"), SubResource("AtlasTexture_aaxgf"), SubResource("AtlasTexture_ixu8t"), SubResource("AtlasTexture_lg5s2"), SubResource("AtlasTexture_w8e83"), SubResource("AtlasTexture_kjks0"), SubResource("AtlasTexture_rkr1b"), SubResource("AtlasTexture_fxueo"), SubResource("AtlasTexture_g0r0x"), SubResource("AtlasTexture_o31pr"), SubResource("AtlasTexture_r2juw"), SubResource("AtlasTexture_drwo3"), SubResource("AtlasTexture_yrw5l"), SubResource("AtlasTexture_ga30n"), SubResource("AtlasTexture_qnqrj"), SubResource("AtlasTexture_bfgvx")],
"loop": true,
"name": &"default",
"speed": 7.0
}, {
"frames": [SubResource("AtlasTexture_fxsfy"), SubResource("AtlasTexture_2uwra"), SubResource("AtlasTexture_q1m1m"), SubResource("AtlasTexture_0ahhs"), SubResource("AtlasTexture_qcwlt"), SubResource("AtlasTexture_hrim3"), SubResource("AtlasTexture_fol5p"), SubResource("AtlasTexture_bjqyg"), SubResource("AtlasTexture_xbdnk"), SubResource("AtlasTexture_oaqbt"), SubResource("AtlasTexture_nlw0b"), SubResource("AtlasTexture_yovkk"), SubResource("AtlasTexture_cnx1f"), SubResource("AtlasTexture_mmsxw"), SubResource("AtlasTexture_kjvge"), SubResource("AtlasTexture_oxt3p"), SubResource("AtlasTexture_0ml0o"), SubResource("AtlasTexture_abnbp")],
"loop": true,
"name": &"run",
"speed": 11.0
}]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(30, 28)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ohagd"]
resource_name = "32 ground"
texture = ExtResource("6_hxpx3")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_t4abf"]
scenes/2/scene = ExtResource("8_gyf3q")

[sub_resource type="TileSet" id="TileSet_aa6sn"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 6
sources/0 = SubResource("TileSetAtlasSource_ohagd")
sources/6 = SubResource("TileSetScenesCollectionSource_t4abf")

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="4"]
resource_name = "Death"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("2:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dlwoh"]
_data = {
"Death": SubResource("4")
}

[sub_resource type="ViewportTexture" id="ViewportTexture_1lw4e"]
viewport_path = NodePath("SubViewport")

[node name="Game" type="Node2D"]
position = Vector2(-10, -9)
script = ExtResource("3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StateLabel" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 14.0

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(439, 818)
script = ExtResource("2")

[node name="Sprite2D" type="AnimatedSprite2D" parent="Player"]
frames = SubResource("SpriteFrames_62a3x")
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("1")

[node name="UpL" type="RayCast2D" parent="Player"]
position = Vector2(-15, -14)
target_position = Vector2(0, 0)
collision_mask = 2
hit_from_inside = true

[node name="UpR" type="RayCast2D" parent="Player"]
position = Vector2(15, -14)
target_position = Vector2(0, 0)
collision_mask = 2
hit_from_inside = true

[node name="DownL" type="RayCast2D" parent="Player"]
position = Vector2(-15, 14)
target_position = Vector2(0, 0)
collision_mask = 34
hit_from_inside = true

[node name="DownR" type="RayCast2D" parent="Player"]
position = Vector2(15, 14)
target_position = Vector2(0, 0)
collision_mask = 34
hit_from_inside = true

[node name="LeftU" type="RayCast2D" parent="Player"]
position = Vector2(-15, -14)
target_position = Vector2(0, 0)
collision_mask = 2
hit_from_inside = true

[node name="LeftD" type="RayCast2D" parent="Player"]
position = Vector2(-15, 14)
target_position = Vector2(0, 0)
collision_mask = 2
hit_from_inside = true

[node name="RightU" type="RayCast2D" parent="Player"]
position = Vector2(15, -14)
target_position = Vector2(0, 0)
collision_mask = 2
hit_from_inside = true

[node name="RightD" type="RayCast2D" parent="Player"]
position = Vector2(32, 32)
target_position = Vector2(0, 0)
collision_mask = 2
hit_from_inside = true

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(15, 14)
current = true
limit_left = 0
limit_right = 1112
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("5_shig4")

[node name="Pogo" type="Node2D" parent="Player"]
visible = false
scale = Vector2(1.4, 1)

[node name="Sprite2D" type="Sprite2D" parent="Player/Pogo"]
position = Vector2(32, 0)
scale = Vector2(1, 0.1)
texture = ExtResource("1")

[node name="PogoRay" type="RayCast2D" parent="Player/Pogo"]
target_position = Vector2(50, 0)
collision_mask = 4
hit_from_inside = true

[node name="Trajecto" type="Node2D" parent="Player"]

[node name="Terrain" type="Node2D" parent="."]

[node name="Floor" type="Node2D" parent="Terrain"]
script = ExtResource("4")

[node name="Tiles" type="Node2D" parent="Terrain/Floor"]

[node name="TileMap" type="TileMap" parent="Terrain/Floor"]
position = Vector2(2, 8)
tile_set = SubResource("TileSet_aa6sn")
format = 2
layer_0/tile_data = PackedInt32Array(1703949, 65536, 0, 1769485, 65536, 1, 1703948, 65536, 0, 1769484, 65536, 1, 1703947, 65536, 0, 1769483, 65536, 1, 1703946, 65536, 0, 1769482, 65536, 1, 1703945, 65536, 0, 1769481, 65536, 1, 1703944, 65536, 0, 1769480, 65536, 1, 1703943, 65536, 0, 1769479, 65536, 1, 1703950, 65536, 0, 1769486, 65536, 1, 1703951, 65536, 0, 1769487, 65536, 1, 1703952, 65536, 0, 1769488, 65536, 1, 1835015, 65536, 0, 1900551, 65536, 0, 1966087, 65536, 0, 2031623, 65536, 0, 1835016, 65536, 0, 1900552, 65536, 0, 1966088, 65536, 0, 2031624, 65536, 0, 1835017, 65536, 0, 1900553, 65536, 0, 1966089, 65536, 0, 2031625, 65536, 0, 1835018, 65536, 0, 1900554, 65536, 0, 1966090, 65536, 0, 2031626, 65536, 0, 1835019, 65536, 0, 1900555, 65536, 0, 1966091, 65536, 0, 2031627, 65536, 0, 1835020, 65536, 0, 1900556, 65536, 0, 1966092, 65536, 0, 2031628, 65536, 0, 1835021, 65536, 0, 1900557, 65536, 0, 1966093, 65536, 0, 2031629, 65536, 0, 1835022, 65536, 0, 1900558, 65536, 0, 1966094, 65536, 0, 2031630, 65536, 0, 1835023, 65536, 0, 1900559, 65536, 0, 1966095, 65536, 0, 2031631, 65536, 0, 1835024, 65536, 0, 1900560, 65536, 0, 1966096, 65536, 0, 2031632, 65536, 0, 2097159, 65536, 0, 2162695, 65536, 0, 2228231, 65536, 0, 2097160, 65536, 0, 2162696, 65536, 0, 2228232, 65536, 0, 2097161, 65536, 0, 2162697, 65536, 0, 2228233, 65536, 0, 2097162, 65536, 0, 2162698, 65536, 0, 2228234, 65536, 0, 2097163, 65536, 0, 2162699, 65536, 0, 2228235, 65536, 0, 2097164, 65536, 0, 2162700, 65536, 0, 2228236, 65536, 0, 2097165, 65536, 0, 2162701, 65536, 0, 2228237, 65536, 0, 2097166, 65536, 0, 2162702, 65536, 0, 2228238, 65536, 0, 2097167, 65536, 0, 2162703, 65536, 0, 2228239, 65536, 0, 2097168, 65536, 0, 2162704, 65536, 0, 2228240, 65536, 0, 1769491, 0, 0, 1703955, 0, 0, 1638419, 0, 0, 1572883, 0, 0, 1507347, 0, 0, 1441811, 0, 0, 1376275, 0, 0, 1310739, 0, 0, 1245203, 0, 0, 1179667, 0, 0)

[node name="Walls" type="Node2D" parent="."]

[node name="1" type="Node2D" parent="Walls"]
position = Vector2(-61, 423)

[node name="StaticBody2D" type="StaticBody2D" parent="Walls/1"]
position = Vector2(32, 0)
scale = Vector2(1, 20)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/1/StaticBody2D"]
shape = SubResource("2")

[node name="Polygon2D" type="Polygon2D" parent="Walls/1/StaticBody2D"]
position = Vector2(1, 0)
scale = Vector2(1.00474, 1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(28, -32.1, 28, 69.55, -394, 69.45, -380, -31.8)

[node name="2" type="Node2D" parent="Walls"]
position = Vector2(961, 478)

[node name="StaticBody2D" type="StaticBody2D" parent="Walls/2"]
position = Vector2(-32, 0)
scale = Vector2(1, 20)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/2/StaticBody2D"]
shape = SubResource("2")

[node name="Polygon2D2" type="Polygon2D" parent="Walls/2/StaticBody2D"]
position = Vector2(356.314, 11.7917)
scale = Vector2(1.02451, 1.43432)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(28, -32.1, 28, 38.7, -380, 38.6, -380, -31.8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Walls"]
libraries = {
"": SubResource("AnimationLibrary_dlwoh")
}

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(512, 288)
render_target_update_mode = 4

[node name="ViewportCamera" type="Camera2D" parent="SubViewport"]
current = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("10_kuv0c")

[node name="Orangeandyellow" type="Sprite2D" parent="SubViewport"]
texture_filter = 1
position = Vector2(426, 762)
rotation = 1.4556
texture = ExtResource("9_lpjo3")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="ViewportTexture" type="TextureRect" parent="CanvasLayer2"]
offset_left = -1.0
offset_top = 5.0
offset_right = 511.0
offset_bottom = 293.0
texture = SubResource("ViewportTexture_1lw4e")
